--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./assets/style.css">
   <title>Professional Portfolio</title>
 </head>
@@ -24,7 +25,7 @@
       <img src="./assets/placeholder.JPG" alt="Temporary headshot">
         <div>
           <h2>About Me</h2>
-          <p>Hi, I'm a new web developer starting out in my career. I've been learning about coding for about 6 months now. I am currently studying at University of Toronto in the FullStack Webdeveloper Bootcamp. I really think that coding is something I can become very skilled at and I hope to create applications that will improve peoples' day to day lives.</p>    
+          <p>Hi, My name is Olivia and I'm a new web developer starting out in my career. I've been learning about coding for about 6 months now and I am currently studying at the University of Toronto in their FullStack Webdeveloper Bootcamp. Down the road I hope to become skilled enough that I can create a social media platform for local musicians to gain followings in their areas. Social media is a tool that has opened up so many opportunities for people, and it's made it much easier to spread information to those in your area. My goal is to help bring back the sense of community that has been lost over recent years. People need somewhere they can go to meet the ones they live so close to yet don't interact with in their daily lives. This is a way to provide that for many communities while using the resources and locations they already have at their disposal. This can not only help performers but also venues, small businesses, local vendors, and artists who need somewhere to promote themsleves.</p>    
         </div>
     </section>
    
@@ -32,14 +33,14 @@
       <div id="work-1">
         <h2>My Work</h2> 
         <figure id="big-card">
-          <img id="first-image" src="./assets/olivia-the-g.github.io_Landing-page_(Nest Hub).png" alt="screenshot of landing page"/>
-          <figcaption><a href="https://olivia-the-g.github.io/Landing-page/">Landing Page</a></figcaption>
+          <img id="first-image" src="./assets/olivia-the-g.github.io_prework-study-guide_(Nest Hub).png" alt="screenshot of prework study guide"/>
+          <figcaption><a href="https://olivia-the-g.github.io/prework-study-guide/">Prework Study Guide</a></figcaption>
         </figure> 
       </div>
       <div id="work-2">
         <figure class="card-columns">
-          <img class="other-images" src="./assets/olivia-the-g.github.io_prework-study-guide_(Nest Hub).png" alt="screenshot of prework study guide"/>
-          <figcaption><a href="https://olivia-the-g.github.io/prework-study-guide/">Prework Study Guide</a></figcaption>
+          <img class="other-images" src="./assets/olivia-the-g.github.io_Landing-page_(Nest Hub).png" alt="screenshot of landing page"/>
+          <figcaption><a href="https://olivia-the-g.github.io/Landing-page/">Landing Page</a></figcaption>
         </figure>
         <figure class="card-columns">
           <img class="other-images" src="./assets/plain-black-background-02fh7564l8qq4m6d.jpg" alt="black screen placeholder"/>
@@ -58,14 +59,10 @@
   </main>
 
  <footer id="contact-me">
-    <h3>Contact Me</h3>
+    <h3>Contact Me ></h3>
     <section id="footer-links">
-      <div id="github-link">
-        <a href="https://github.com/Olivia-the-G">GitHub</a>
-      </div>
-      <div id="linkedin-link">
-        <a href="https://www.linkedin.com/in/olivia-gowan-a13a62294/">LinkedIn</a>
-      </div>
+        <a href="https://github.com/Olivia-the-G" class="fa fa-github"></a>
+        <a href="https://www.linkedin.com/in/olivia-gowan-a13a62294/" class="fa fa-linkedin"></a>
     </section>
  </footer>
  
